--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "webpack-dev-server": "^1.10.1"
   },
   "dependencies": {
-    "socket.io-client": "^1.3.6"
+    "socket.io-client": "^1.3.6",
+    "wrtc": "0.0.58"
   },
   "scripts": {
     "watch": "webpack-dev-server --progress --colors",
