--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "datachannel-test",
   "version": "1.0.0",
   "description": "A minimal app to test WebRTC DataChannels",
-  "main": "bundle.js",
+  "main": "peer.js",
   "devDependencies": {
+    "LiveScript": "^1.3.1",
     "livescript-loader": "^0.1.5",
     "webpack": "^1.12.1",
     "webpack-dev-server": "^1.10.1"
@@ -12,7 +13,8 @@
     "socket.io-client": "^1.3.6"
   },
   "scripts": {
-    "watch": "webpack-dev-server --progress --colors",
+    "compile": "lsc -c peer.ls",
+    "watch": "lsc -cw peer.ls",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
