--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "webpack-dev-server": "^1.10.1"
   },
   "dependencies": {
-    "socket.io-client": "^1.3.6"
+    "socket.io-client": "^1.3.6",
+    "webrtc-adapter-test": "^0.2.3"
   },
   "scripts": {
     "compile": "lsc -c peer.ls",
