--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A minimal app to test WebRTC DataChannels",
   "main": "peer.js",
   "devDependencies": {
+    "@pika/plugin-standard-pkg": "^0.3.14",
     "LiveScript": "^1.3.1",
     "livescript-loader": "^0.1.5",
     "webpack": "^1.12.1",
@@ -32,5 +33,17 @@
   "bugs": {
     "url": "https://github.com/yousefamar/p2p-peer/issues"
   },
-  "homepage": "https://github.com/yousefamar/p2p-peer#readme"
+  "homepage": "https://github.com/yousefamar/p2p-peer#readme",
+  "@pika/pack": {
+    "pipeline": [
+      [
+        "@pika/plugin-standard-pkg",
+        {
+          "exclude": [
+            "__tests__/**/*"
+          ]
+        }
+      ]
+    ]
+  }
 }
