--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A minimal app to test WebRTC DataChannels",
   "main": "peer.js",
   "devDependencies": {
+    "@pika/plugin-build-node": "^0.3.14",
     "@pika/plugin-standard-pkg": "^0.3.14",
     "LiveScript": "^1.3.1",
     "livescript-loader": "^0.1.5",
@@ -36,14 +37,8 @@
   "homepage": "https://github.com/yousefamar/p2p-peer#readme",
   "@pika/pack": {
     "pipeline": [
-      [
-        "@pika/plugin-standard-pkg",
-        {
-          "exclude": [
-            "__tests__/**/*"
-          ]
-        }
-      ]
+      ["@pika/plugin-standard-pkg"],
+      ["@pika/plugin-build-node", {}]
     ]
   }
 }
