--- a/pkg/package.json
+++ b/pkg/package.json
@@ -4,6 +4,7 @@
   "version": "1.1.1",
   "license": "MIT",
   "esnext": "dist-src/index.js",
+  "main": "dist-node/index.js",
   "pika": true,
   "sideEffects": false,
   "keywords": [
@@ -29,6 +30,7 @@
     "webrtc-adapter-test": "^0.2.3"
   },
   "devDependencies": {
+    "@pika/plugin-build-node": "^0.3.14",
     "@pika/plugin-standard-pkg": "^0.3.14",
     "LiveScript": "^1.3.1",
     "livescript-loader": "^0.1.5",
