--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "p2p-peer",
   "version": "1.1.1",
   "description": "A minimal app to test WebRTC DataChannels",
-  "main": "peer.js",
+  "main": "src/index.js",
+  "module": "src/index.js",
   "devDependencies": {
     "@pika/plugin-build-node": "^0.3.14",
     "@pika/plugin-standard-pkg": "^0.3.14",
