--- a/package.json
+++ b/package.json
@@ -8,20 +8,11 @@
     "@pika/plugin-build-node": "^0.3.14",
     "@pika/plugin-build-web": "^0.3.14",
     "@pika/plugin-bundle-web": "^0.3.14",
-    "@pika/plugin-standard-pkg": "^0.3.14",
-    "LiveScript": "^1.3.1",
-    "livescript-loader": "^0.1.5",
-    "webpack": "^1.12.1",
-    "webpack-dev-server": "^1.10.1"
+    "@pika/plugin-standard-pkg": "^0.3.14"
   },
-  "dependencies": {
-    "socket.io-client": "^1.3.6",
-    "webrtc-adapter-test": "^0.2.3"
-  },
+  "dependencies": {},
   "scripts": {
-    "compile": "lsc -c peer.ls",
-    "watch": "lsc -cw peer.ls",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "pack build"
   },
   "repository": {
     "type": "git",
@@ -45,6 +36,9 @@
       ],
       [
         "@pika/plugin-build-web"
+      ],
+      [
+        "@pika/plugin-build-node"
       ],
       [
         "@pika/plugin-bundle-web"
