--- a/pkg/package.json
+++ b/pkg/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "esnext": "dist-src/index.js",
   "module": "dist-web/index.js",
+  "main": "dist-node/index.js",
   "pika": true,
   "sideEffects": false,
   "keywords": [
@@ -25,18 +26,11 @@
     "type": "git",
     "url": "git+ssh://git@github.com/yousefamar/p2p-peer.git"
   },
-  "dependencies": {
-    "socket.io-client": "^1.3.6",
-    "webrtc-adapter-test": "^0.2.3"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@pika/plugin-build-node": "^0.3.14",
     "@pika/plugin-build-web": "^0.3.14",
     "@pika/plugin-bundle-web": "^0.3.14",
-    "@pika/plugin-standard-pkg": "^0.3.14",
-    "LiveScript": "^1.3.1",
-    "livescript-loader": "^0.1.5",
-    "webpack": "^1.12.1",
-    "webpack-dev-server": "^1.10.1"
+    "@pika/plugin-standard-pkg": "^0.3.14"
   }
 }
