--- a/pkg/package.json
+++ b/pkg/package.json
@@ -26,7 +26,10 @@
     "type": "git",
     "url": "git+ssh://git@github.com/yousefamar/p2p-peer.git"
   },
-  "dependencies": {},
+  "dependencies": {
+    "socket.io-client": "^2.2.0",
+    "wrtc": "^0.4.1"
+  },
   "devDependencies": {
     "@pika/plugin-build-node": "^0.3.14",
     "@pika/plugin-build-web": "^0.3.14",
