--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "p2p-peer",
+  "files": ["dist"],
   "version": "4.0.0",
   "description": "Scalable multiplayer for the web",
-  "main": "src/index.js",
-  "module": "src/index.js",
+  "main": "./dist/libfabric.umd.js",
+  "module": "./dist/libfabric.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/libfabric.es.js",
+      "require": "./dist/libfabric.umd.js"
+    }
+  },
   "devDependencies": {
+    "socket.io-client": "^4.1.2",
     "typescript": "^4.3.2",
     "vite": "^2.3.7"
-  },
-  "dependencies": {
-    "socket.io-client": "^2.2.0",
-    "wrtc": "^0.4.1"
   },
   "scripts": {
     "dev": "vite",
